--- a/.github/workflows/post-books-tweet.yml
+++ b/.github/workflows/post-books-tweet.yml
@@ -1,1 +1,51 @@
+name: Post Books Tweet
 
+on:
+  schedule:
+    # FANZAの投稿の間に挟む（JST時刻）
+    # JST 18:30 (UTC 09:30) - ブックス1つ目
+    - cron: '30 9 * * *'
+    # JST 19:45 (UTC 10:45) - ブックス2つ目
+    - cron: '45 10 * * *'
+    # JST 21:00 (UTC 12:00) - ブックス3つ目
+    - cron: '0 12 * * *'
+    # JST 22:00 (UTC 13:00) - ブックス4つ目
+    - cron: '0 13 * * *'
+    # JST 23:30 (UTC 14:30) - ブックス5つ目
+    - cron: '30 14 * * *'
+  
+  workflow_dispatch:  # 手動実行可能
+
+jobs:
+  post-tweet:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+    
+    - name: Install dependencies
+      run: |
+        pip install tweepy requests Pillow
+    
+    - name: Post tweet
+      env:
+        TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
+        TWITTER_API_SECRET: ${{ secrets.TWITTER_API_SECRET }}
+        TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+        TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+      run: |
+        python scripts/post_tweet_books.py
+    
+    - name: Commit counter update
+      run: |
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git add data/counter.txt
+        git diff --quiet && git diff --staged --quiet || git commit -m "Update tweet counter"
+        git push
